--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
               <a class="link nav-link" href="./index.html">Studio</a>
             </li>
             <li>
-              <a class="link nav-link" href="./portfolio.html"
-                >Portfolio</a
-              >
+              <a class="link nav-link" href="./portfolio.html">Portfolio</a>
             </li>
             <li>
               <a class="link nav-link" href="">Contacts</a>
@@ -77,6 +75,9 @@
           <h2 class="hidden style-header-medium">Our Principles</h2>
           <ul class="principles-section list">
             <li class="principles-section-list">
+              <svg class="principles-icons" width="64" height="64">
+                <use href="./images/icons.svg#antenna"></use>
+              </svg>
               <h3 class="style-header-small">Strategy</h3>
               <p class="p-text-style">
                 Our goal is to identify the business problem to walk away with
@@ -84,6 +85,9 @@
               </p>
             </li>
             <li class="principles-section-list">
+              <svg class="principles-icons" width="64" height="64">
+                <use href="./images/icons.svg#clock"></use>
+              </svg>
               <h3 class="style-header-small">Punctuality</h3>
               <p class="p-text-style">
                 Bring the key message to the brand's audience for the best price
@@ -91,6 +95,9 @@
               </p>
             </li>
             <li class="principles-section-list">
+              <svg class="principles-icons" width="64" height="64">
+                <use href="./images/icons.svg#diagram"></use>
+              </svg>
               <h3 class="style-header-small">Diligence</h3>
               <p class="p-text-style">
                 Research and confirm brands that present the strongest digital
@@ -98,6 +105,9 @@
               </p>
             </li>
             <li class="principles-section-list">
+              <svg class="principles-icons" width="64" height="64">
+                <use href="./images/icons.svg#astronaut"></use>
+              </svg>
               <h3 class="style-header-small">Technologies</h3>
               <p class="p-text-style">
                 Design practice focused on digital experiences. We bring forth a
@@ -154,6 +164,36 @@
               <div class="descr-container">
                 <h3 class="card-text">Mark Guerrero</h3>
                 <p class="card-text-style">Product Designer</p>
+                <ul class="socials list">
+                  <li class="social-item">
+                    <a href="">
+                      <svg class="socials-icon" width="40" height="40">
+                      <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="">
+                      <svg class="socials-icon" width="40" height="40">
+                      <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="">
+                      <svg class="socials-icon" width="40" height="40">
+                      <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="">
+                      <svg class="socials-icon" width="40" height="40">
+                      <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card card-set-item card-style">
@@ -166,6 +206,36 @@
               <div class="descr-container">
                 <h3 class="card-text">Tom Ford</h3>
                 <p class="card-text-style">Frontend Developer</p>
+                <ul class="socials list">
+                  <li class="social-item">
+                    <a href="">
+                      <svg class="socials-icon" width="40" height="40">
+                      <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="">
+                      <svg class="socials-icon" width="40" height="40">
+                      <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="">
+                      <svg class="socials-icon" width="40" height="40">
+                      <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="">
+                      <svg class="socials-icon" width="40" height="40">
+                      <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card card-set-item card-style">
@@ -178,6 +248,36 @@
               <div class="descr-container">
                 <h3 class="card-text">Camila Garcia</h3>
                 <p class="card-text-style">Marketing</p>
+                <ul class="socials list">
+                  <li class="social-item">
+                    <a href="">
+                      <svg class="socials-icon" width="40" height="40">
+                      <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="">
+                      <svg class="socials-icon" width="40" height="40">
+                      <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="">
+                      <svg class="socials-icon" width="40" height="40">
+                      <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="">
+                      <svg class="socials-icon" width="40" height="40">
+                      <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card card-set-item card-style">
@@ -190,10 +290,43 @@
               <div class="descr-container">
                 <h3 class="card-text">Daniel Wilson</h3>
                 <p class="card-text-style">UI Designer</p>
+                <ul class="socials list">
+                  <li class="social-item">
+                    <a href="">
+                      <svg class="socials-icon" width="40" height="40">
+                      <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="">
+                      <svg class="socials-icon" width="40" height="40">
+                      <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="">
+                      <svg class="socials-icon" width="40" height="40">
+                      <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="">
+                      <svg class="socials-icon" width="40" height="40">
+                      <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
         </div>
+      </section>
+      <section class="section">
+
       </section>
     </main>
     <!-- footer -->
