--- a/index.html
+++ b/index.html
@@ -75,9 +75,11 @@
           <h2 class="hidden style-header-medium">Our Principles</h2>
           <ul class="principles-section list">
             <li class="principles-section-list">
-              <svg class="principles-icons" width="64" height="64">
-                <use href="./images/icons.svg#antenna"></use>
-              </svg>
+              <div class="principles-icons">
+                <svg class="principles-item" width="" height="">
+                  <use href="./images/icons.svg#antenna"></use>
+                </svg>
+              </div>
               <h3 class="style-header-small">Strategy</h3>
               <p class="p-text-style">
                 Our goal is to identify the business problem to walk away with
@@ -85,7 +87,7 @@
               </p>
             </li>
             <li class="principles-section-list">
-              <svg class="principles-icons" width="64" height="64">
+              <svg class="principles-item" width="" height="">
                 <use href="./images/icons.svg#clock"></use>
               </svg>
               <h3 class="style-header-small">Punctuality</h3>
@@ -95,7 +97,7 @@
               </p>
             </li>
             <li class="principles-section-list">
-              <svg class="principles-icons" width="64" height="64">
+              <svg class="principles-item" width="" height="">
                 <use href="./images/icons.svg#diagram"></use>
               </svg>
               <h3 class="style-header-small">Diligence</h3>
@@ -105,7 +107,7 @@
               </p>
             </li>
             <li class="principles-section-list">
-              <svg class="principles-icons" width="64" height="64">
+              <svg class="principles-item" width="" height="">
                 <use href="./images/icons.svg#astronaut"></use>
               </svg>
               <h3 class="style-header-small">Technologies</h3>
@@ -164,31 +166,31 @@
               <div class="descr-container">
                 <h3 class="card-text">Mark Guerrero</h3>
                 <p class="card-text-style">Product Designer</p>
-                <ul class="socials list">
+                <ul class="social-list list">
                   <li class="social-item">
-                    <a href="">
-                      <svg class="socials-icon" width="40" height="40">
+                    <a class="social-link link" href="">
+                      <svg class="socials-icon" width="16" height="16">
                       <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="">
-                      <svg class="socials-icon" width="40" height="40">
+                    <a class="social-link link" href="">
+                      <svg class="socials-icon" width="16" height="16">
                       <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="">
-                      <svg class="socials-icon" width="40" height="40">
+                    <a class="social-link link" href="">
+                      <svg class="socials-icon" width="16" height="16">
                       <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="">
-                      <svg class="socials-icon" width="40" height="40">
+                    <a class="social-link link" href="">
+                      <svg class="socials-icon" width="16" height="16">
                       <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -206,31 +208,31 @@
               <div class="descr-container">
                 <h3 class="card-text">Tom Ford</h3>
                 <p class="card-text-style">Frontend Developer</p>
-                <ul class="socials list">
+                <ul class="social-list list">
                   <li class="social-item">
-                    <a href="">
-                      <svg class="socials-icon" width="40" height="40">
+                    <a class="social-link link" href="">
+                      <svg class="socials-icon" width="16" height="16">
                       <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="">
-                      <svg class="socials-icon" width="40" height="40">
+                    <a class="social-link link" href="">
+                      <svg class="socials-icon" width="16" height="16">
                       <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="">
-                      <svg class="socials-icon" width="40" height="40">
+                    <a class="social-link link" href="">
+                      <svg class="socials-icon" width="16" height="16">
                       <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="">
-                      <svg class="socials-icon" width="40" height="40">
+                    <a class="social-link link" href="">
+                      <svg class="socials-icon" width="16" height="16">
                       <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -249,35 +251,36 @@
                 <h3 class="card-text">Camila Garcia</h3>
                 <p class="card-text-style">Marketing</p>
                 <ul class="socials list">
-                  <li class="social-item">
-                    <a href="">
-                      <svg class="socials-icon" width="40" height="40">
-                      <use href="./images/icons.svg#instagram"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-item">
-                    <a href="">
-                      <svg class="socials-icon" width="40" height="40">
-                      <use href="./images/icons.svg#twitter"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-item">
-                    <a href="">
-                      <svg class="socials-icon" width="40" height="40">
-                      <use href="./images/icons.svg#facebook"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-item">
-                    <a href="">
-                      <svg class="socials-icon" width="40" height="40">
-                      <use href="./images/icons.svg#linkedin"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
+                  <ul class="social-list list">
+                    <li class="social-item">
+                      <a class="social-link link" href="">
+                        <svg class="socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-item">
+                      <a class="social-link link" href="">
+                        <svg class="socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-item">
+                      <a class="social-link link" href="">
+                        <svg class="socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social-item">
+                      <a class="social-link link" href="">
+                        <svg class="socials-icon" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
               </div>
             </li>
             <li class="team-card card-set-item card-style">
@@ -290,31 +293,31 @@
               <div class="descr-container">
                 <h3 class="card-text">Daniel Wilson</h3>
                 <p class="card-text-style">UI Designer</p>
-                <ul class="socials list">
+                <ul class="social-list list">
                   <li class="social-item">
-                    <a href="">
-                      <svg class="socials-icon" width="40" height="40">
+                    <a class="social-link link" href="">
+                      <svg class="socials-icon" width="16" height="16">
                       <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="">
-                      <svg class="socials-icon" width="40" height="40">
+                    <a class="social-link link" href="">
+                      <svg class="socials-icon" width="16" height="16">
                       <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="">
-                      <svg class="socials-icon" width="40" height="40">
+                    <a class="social-link link" href="">
+                      <svg class="socials-icon" width="16" height="16">
                       <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="">
-                      <svg class="socials-icon" width="40" height="40">
+                    <a class="social-link link" href="">
+                      <svg class="socials-icon" width="16" height="16">
                       <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -326,7 +329,41 @@
         </div>
       </section>
       <section class="section">
-
+        <div class="container">
+          <h2 class="style-header-medium">Customers</h2>
+          <ul class="customers-list list">
+            <li class="customers-item">
+              <svg class="customers-icon">
+                <use href="./images/icons/Logo.svg"></use>
+              </svg>
+            </li>
+            <li>
+              <svg>
+                <use></use>
+              </svg>
+            </li>
+            <li>
+              <svg>
+                <use></use>
+              </svg>
+            </li>
+            <li>
+              <svg>
+                <use></use>
+              </svg>
+            </li>
+            <li>
+              <svg>
+                <use></use>
+              </svg>
+            </li>
+            <li>
+              <svg>
+                <use></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- footer -->
