--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <ul class="principles-section list">
             <li class="principles-section-list">
               <div class="principles-icons">
-                <svg class="principles-item" width="" height="">
+                <svg class="principles-item" width="64" height="64">
                   <use href="./images/icons.svg#antenna"></use>
                 </svg>
               </div>
@@ -87,9 +87,11 @@
               </p>
             </li>
             <li class="principles-section-list">
-              <svg class="principles-item" width="" height="">
-                <use href="./images/icons.svg#clock"></use>
-              </svg>
+              <div class="principles-icons">
+                <svg class="principles-item" width="64" height="64">
+                  <use href="./images/icons.svg#clock"></use>
+                </svg>
+              </div>
               <h3 class="style-header-small">Punctuality</h3>
               <p class="p-text-style">
                 Bring the key message to the brand's audience for the best price
@@ -97,9 +99,11 @@
               </p>
             </li>
             <li class="principles-section-list">
-              <svg class="principles-item" width="" height="">
-                <use href="./images/icons.svg#diagram"></use>
-              </svg>
+              <div class="principles-icons">
+                <svg class="principles-item" width="64" height="64">
+                  <use href="./images/icons.svg#diagram"></use>
+                </svg>
+              </div>
               <h3 class="style-header-small">Diligence</h3>
               <p class="p-text-style">
                 Research and confirm brands that present the strongest digital
@@ -107,9 +111,11 @@
               </p>
             </li>
             <li class="principles-section-list">
-              <svg class="principles-item" width="" height="">
-                <use href="./images/icons.svg#astronaut"></use>
-              </svg>
+              <div class="principles-icons">
+                <svg class="principles-item" width="64" height="64">
+                  <use href="./images/icons.svg#astronaut"></use>
+                </svg>
+              </div>
               <h3 class="style-header-small">Technologies</h3>
               <p class="p-text-style">
                 Design practice focused on digital experiences. We bring forth a
