--- a/index.html
+++ b/index.html
@@ -175,28 +175,28 @@
                 <ul class="social-list list">
                   <li class="social-item">
                     <a class="social-link link" href="">
-                      <svg class="socials-icon" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link link" href="">
-                      <svg class="socials-icon" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link link" href="">
-                      <svg class="socials-icon" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link link" href="">
-                      <svg class="socials-icon" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
