--- a/index.html
+++ b/index.html
@@ -217,28 +217,28 @@
                 <ul class="social-list list">
                   <li class="social-item">
                     <a class="social-link link" href="">
-                      <svg class="socials-icon" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link link" href="">
-                      <svg class="socials-icon" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link link" href="">
-                      <svg class="socials-icon" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link link" href="">
-                      <svg class="socials-icon" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -256,36 +256,36 @@
               <div class="descr-container">
                 <h3 class="card-text">Camila Garcia</h3>
                 <p class="card-text-style">Marketing</p>
-                  <ul class="social-list list">
-                    <li class="social-item">
-                      <a class="social-link link" href="">
-                        <svg class="socials-icon" width="16" height="16">
-                        <use href="./images/icons.svg#instagram"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-item">
-                      <a class="social-link link" href="">
-                        <svg class="socials-icon" width="16" height="16">
-                        <use href="./images/icons.svg#twitter"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-item">
-                      <a class="social-link link" href="">
-                        <svg class="socials-icon" width="16" height="16">
-                        <use href="./images/icons.svg#facebook"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-item">
-                      <a class="social-link link" href="">
-                        <svg class="socials-icon" width="16" height="16">
-                        <use href="./images/icons.svg#linkedin"></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
+                <ul class="social-list list">
+                  <li class="social-item">
+                    <a class="social-link link" href="">
+                      <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="social-link link" href="">
+                      <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="social-link link" href="">
+                      <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a class="social-link link" href="">
+                      <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card card-set-item card-style">
@@ -301,28 +301,28 @@
                 <ul class="social-list list">
                   <li class="social-item">
                     <a class="social-link link" href="">
-                      <svg class="socials-icon" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link link" href="">
-                      <svg class="socials-icon" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link link" href="">
-                      <svg class="socials-icon" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a class="social-link link" href="">
-                      <svg class="socials-icon" width="16" height="16">
+                      <svg class="social-icon" width="16" height="16">
                       <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
