--- a/index.html
+++ b/index.html
@@ -333,39 +333,52 @@
           </ul>
         </div>
       </section>
+      <!-- Customers -->
       <section class="section">
         <div class="container">
           <h2 class="style-header-medium">Customers</h2>
           <ul class="customers-list list">
             <li class="customers-item">
-              <svg class="customers-icon">
-                <use href="./images/icons/Logo.svg"></use>
-              </svg>
+              <a class="customers-link link" href="">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#logo1"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <svg>
-                <use></use>
-              </svg>
+            <li class="customers-item">
+              <a class="customers-link link" href="">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#logo2.svg"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <svg>
-                <use></use>
-              </svg>
+            <li class="customers-item">
+              <a class="customers-link link" href="">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#logo3.svg"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <svg>
-                <use></use>
-              </svg>
+            <li class="customers-item">
+              <a class="customers-link link" href="">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#logo4.svg"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <svg>
-                <use></use>
-              </svg>
+            <li class="customers-item">
+              <a class="customers-link link" href="">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#logo5.svg"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <svg>
-                <use></use>
-              </svg>
+            <li class="customers-item">
+              <a class="customers-link link" href="">
+                <svg class="customers-icon" width="104" height="56">
+                  <use href="./images/icons.svg#logo6.svg"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
