--- a/index.html
+++ b/index.html
@@ -387,13 +387,48 @@
     <!-- footer -->
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="footer-logo list link"
-          >Web<span class="footer-logo-part">Studio</span>
-        </a>
-        <p class="footer-p">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-descr">
+          <a href="./index.html" class="footer-logo list link"
+            >Web<span class="footer-logo-part">Studio</span>
+          </a>
+          <p class="footer-p">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-social">
+          <p class="p-text-style">Social media</p>
+          <ul class="footer-social-list list">
+            <li class="footer-social-item">
+              <a class="footer-social-link link" href="">
+                <svg class="footer-social-icon" width="24" height="24">
+                <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link link" href="">
+                <svg class="footer-social-icon" width="24" height="24">
+                <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link link" href="">
+                <svg class="footer-social-icon" width="24" height="24">
+                <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link link" href="">
+                <svg class="footer-social-icon" width="24" height="24">
+                <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
