--- a/index.html
+++ b/index.html
@@ -348,35 +348,35 @@
             <li class="customers-item">
               <a class="customers-link link" href="">
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#logo2.svg"></use>
+                  <use href="./images/icons.svg#logo2"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a class="customers-link link" href="">
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#logo3.svg"></use>
+                  <use href="./images/icons.svg#logo3"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a class="customers-link link" href="">
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#logo4.svg"></use>
+                  <use href="./images/icons.svg#logo4"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a class="customers-link link" href="">
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#logo5.svg"></use>
+                  <use href="./images/icons.svg#logo5"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a class="customers-link link" href="">
                 <svg class="customers-icon" width="104" height="56">
-                  <use href="./images/icons.svg#logo6.svg"></use>
+                  <use class="use" href="./images/icons.svg#logo6"></use>
                 </svg>
               </a>
             </li>
