--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
     </main>
     <!-- footer -->
     <footer class="footer">
-      <div class="container">
+      <div class="footer-container">
         <div class="footer-descr">
           <a href="./index.html" class="footer-logo list link"
             >Web<span class="footer-logo-part">Studio</span>
@@ -397,7 +397,7 @@
           </p>
         </div>
         <div class="footer-social">
-          <p class="p-text-style">Social media</p>
+          <p class="footer-social-text">Social media</p>
           <ul class="footer-social-list list">
             <li class="footer-social-item">
               <a class="footer-social-link link" href="">
