--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
           </ul>
           <ul class="list card-set">
             <li class="card-set-item-p">
-              <a href="" class="link">
+              <a href="" class="link portfolio-card-link">
                 <img
                   src="./images/Portfolio/img.jpg"
                   alt="BankInterfaceApp"
@@ -92,7 +92,7 @@
               </a>
             </li>
             <li class="card-set-item-p">
-              <a class="link" href="">
+              <a class="link portfolio-card-link" href="">
                 <img
                   src="./images/Portfolio/img1.jpg"
                   alt="Cashless Payment App"
@@ -106,7 +106,7 @@
               </a>
             </li>
             <li class="card-set-item-p">
-              <a class="link" href="">
+              <a class="link portfolio-card-link" href="">
                 <img
                   src="./images/Portfolio/img2.jpg"
                   alt="Meditation App"
@@ -120,7 +120,7 @@
               </a>
             </li>
             <li class="card-set-item-p">
-              <a class="link" href="">
+              <a class="link portfolio-card-link" href="">
                 <img
                   src="./images/Portfolio/img3.jpg"
                   alt="Taxi Service"
@@ -134,7 +134,7 @@
               </a>
             </li>
             <li class="card-set-item-p">
-              <a class="link" href="">
+              <a class="link portfolio-card-link" href="">
                 <img
                   src="./images/Portfolio/img4.jpg"
                   alt="Screen Illustrations"
@@ -148,7 +148,7 @@
               </a>
             </li>
             <li class="card-set-item-p">
-              <a class="link" href="">
+              <a class="link portfolio-card-link" href="">
                 <img
                   src="./images/Portfolio/img5.jpg"
                   alt="Online Courses"
@@ -162,7 +162,7 @@
               </a>
             </li>
             <li class="card-set-item-p">
-              <a class="link" href="">
+              <a class="link portfolio-card-link" href="">
                 <img
                   src="./images/Portfolio/img6.jpg"
                   alt="Instagram Stories Concept"
@@ -176,7 +176,7 @@
               </a>
             </li>
             <li class="card-set-item-p">
-              <a class="link" href="">
+              <a class="link portfolio-card-link" href="">
                 <img
                   src="./images/Portfolio/img7.jpg"
                   alt="Organic Food"
@@ -190,7 +190,7 @@
               </a>
             </li>
             <li class="card-set-item-p">
-              <a class="link" href="">
+              <a class="link portfolio-card-link" href="">
                 <img
                   src="./images/Portfolio/img8.jpg"
                   alt="Fresh Coffee"
