--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
             <li class="customers-item">
               <a class="customers-link link" href="">
                 <svg class="customers-icon" width="104" height="56">
-                  <use class="use" href="./images/icons.svg#logo6"></use>
+                  <use href="./images/icons.svg#logo6"></use>
                 </svg>
               </a>
             </li>
